# claude-copet

./: .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  settings.html  tsconfig.json  vite.config.ts
.claude/: settings.json
.github/workflows/: release.yml
docs/: HANDOFF.md  hooks.md  llm.md  release.md
docs/prds/: 2026-06-25-claude-code-desktop-pet.md  2026-06-26-claude-code-session-hud.md  2026-06-26-real-context-window.md  2026-06-27-auto-connect-monitoring.md  2026-06-29-i18n-localization.md
hooks/: claude-copet-hook.sh
scripts/: gen-assets.mjs
src/: animation.test.ts  animation.ts  bubble.ts  hud.test.ts  hud.ts  i18n.test.ts  i18n.ts  main.ts  render.ts  settings-page.css  settings-page.ts  settings.ts  sprites.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  growth.rs  hooks_install.rs  i18n.rs  lib.rs  main.rs  mood.rs  session.rs  settings.rs  speaker.rs
src-tauri/tests/: attention.rs  context.rs  context_client.rs  events.rs  growth.rs  hook_script.rs  hooks_install.rs  i18n.rs  llm_speaker.rs  mood.rs  session.rs  settings.rs  speaker.rs  usage.rs  usage_client.rs
tasks/: 2026-06-26-hud-popup-windowing.md  2026-06-26-usage-limits-hud.md
tasks/2026-06-25-claude-code-desktop-pet/: 1-tauri-shell-idle-pet.md  2-event-perception-pipe.md  3-mood-state-machine-template-speech.md  4-growth-xp-evolution-persistence.md  5-llm-speaker-settings.md  6-interactions-drag-pet-menu.md  7-github-actions-release.md  8-connect-claude-code.md
(+11 files in other folders)
